# blog-app-api

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.ps1  run.sh  test.txt  todos.md
app/config/: settings.py  urls.py
app/core/: models.py
app/core/constants/: constants.py  mock_data.py
app/core/migrations/: 0001_initial.py
app/core/tests/: test_models.py
app/shared/: enums.py
app/user/: admin.py  models.py  serializers.py  urls.py
app/user/migrations/: 0001_initial.py
app/user/tests/: test_admin.py  test_models.py  test_user_api.py
config/: settings.py
core/: manage.py
core/general/tests/: test_collections.py  test_misc.py
core/general/utils/: cryptography.py
core/project/: asgi.py  wsgi.py
core/project/settings/: __init__.py  base.py  custom.py  envvars.py  logging.py
core/project/settings/templates/: settings.dev.py
core/shared/tests/: test_collections.py  test_misc.py
core/shared/utils/: collections.py  misc.py  settings.py
