[tool.poetry]
name = "blog-app-api"
version = "0.1.0"
description = ""
authors = ["Adrian333Dev <adrian333dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.7"
django-filter = "^23.2"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"
pynacl = "^1.5.0"
pydantic = "^1.10.7"
pytest = "^7.4.1"
pytest-xdist = "^3.3.1"
pytest-django = "^4.5.2"
model-bakery = "^1.15.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
colorlog = "^6.7.0"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.project.settings"
django_find_project = false
python_files = "test_*.py"
testpaths = ["core"]
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:" # optional

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
